--- a/old_index_02.html
+++ b/old_index_02.html
@@ -14,11 +14,14 @@
         <li data-menuanchor="mentors">
             <a href="#faq">Join the Team</a>
         </li>
+        <li data-menuanchor="mentors">
+            <a href="#faq">Contact Us</a>
+        </li>
         <li data-menuanchor="faq">
             <a href="#faq">FAQ</a>
         </li>
         <li data-menuanchor="exec">
-            <a href="#exec">Meet Us</a>
+            <a href="#exec">Who We Are</a>
         </li>
         <li data-menuanchor="about">
             <a href="#about">About</a>
@@ -27,7 +30,8 @@
 
     <div id="homediv">
         <div class="content">
-            <img src="logo.jpg" alt="CodeIt!" >
+            <img src="logo.png" alt="CodeIt!" height="100vh">
+            <br><br>
             <p>Saturdays, October 7-December 2, 2017 </p>
             <h2>An MIT program for middle school girls to explore computer science</h2>
         </div>
@@ -107,6 +111,7 @@
                 <h6>Who is organizing this program?</h6> 
                 MIT students.
             </div>
+
             <div class="faq-section">
                 <h3>STUDENTS</h3>
                 <h6>Can boys participate?</h6> 
@@ -127,106 +132,7 @@
                 <h6>I'm interested, but won't be able to make all of the sessions. Can I still apply?</h6> 
                 We give heavy preference to girls who can commit to all of our class sessions, but we still encourage you to apply! We can make arrangements to send supplementary materials to make up for the missed class(es), if need be.
             </div>
-            <div class="mentors">
-                <h3>MENTORS</h3>
-                <h6>What is the weekly time commitment?</h6> The classes run from 11am to 3pm on Saturdays, so you should be available from 10:30am to 3:30pm. You are expected to attend all sessions.
-
-                <h6>What is the time commitment outside of weekly sessions?</h6> Prior to the program's start, you are expected to meet with the other mentors once, so that you know what we have planned and get to know your fellow mentors. We may also ask you to review upcoming material on your own time.
-
-                <h6>What experience do I need?</h6> Be friendly and fun! You should understand fundamental programming concepts, and have taken at least an introductory computer science course (e.g. AP Computer Science, 6.0001/0002). Familiarity with block-based programming (e.g. Scratch, App Inventor) is a plus, but not required!
-
-                <h6>What exactly do mentors do?</h6> As a mentor, you will be like a role model to the students. You will be someone that the students turn to when they have questions, are stuck, or just want to talk about life in STEM!
-
-                <h6>How can I get involved beyond mentoring at the weekly sessions?</h6> Contact us; we would love for you to be involved in developing the coding and non-coding activities!
-
-                <h6>What does a typical session consist of?</h6> Feel free to take a look at the lesson plans <a href="https://mitcodeit.wordpress.com/mentors/">here</a>!
-            </div>
         </div>
-    </div>
-
-    <style>
-        .divTable{
-            display: table;
-            margin: auto;
-            max-width: 1000px;
-        }
-        .divTableRow {
-            display: table-row;
-        }
-        .divTableCell {
-            display: table-cell;
-            min-width: 300px;
-            vertical-align: bottom;
-        }
-        .divTableBody {
-            display: table-row-group;
-        }
-    </style>
-    <div class="section" id="exec">
-        <div>
-            <h1>Exec</h1>
-            <div class="divTable">
-                <div class="divTableBody">
-                    <div class="divTableRow">
-                        <div class="divTableCell">
-                            <h6> Organizing Lead: Kelsey Wong </h6>
-                            <img class="KelseyW" src="./kelseyw.jpg" width="264" height="264">
-                        </div>
-                        <div class="divTableCell">
-                            <h6> Curriculum Lead: Kelsey Chan </h6>
-                            <img class="KelseyC" src="./kelseyc.jpg" width="264" height="264">
-                        </div>
-                        <div class="divTableCell">
-                            <h6> Curriculum Lead: Raul Boquin </h6>
-                            <img class="Raul" src="./raul.jpg" width="264" height="264">
-                        </div>
-                    </div>
-                        <div class="divTableRow">
-                            <div class="divTableCell">
-                                <h6> Student Coordinator: Steph O'Brien </h6>
-                                <img class="Steph" src="./steph.jpg" width="264" height="264">
-                            </div>
-                            <div class="divTableCell">
-                                <h6> Mentor Coordinator: Riana Hoagland </h6>
-                                <img class="Riana" src="./riana.jpg" width="264" height="264">
-                            </div>
-                            <div class="divTableCell">
-                                <h6> Social Curriculum: Hannah Gaudet </h6>
-                                <img class="Hannah" src="./hannah.jpg" width="264" height="264">
-                            </div>
-                    </div>
-                    <div class="divTableRow">
-                        <div class="divTableCell">
-                            <h6> Publicity/External Relations: Jennifer Lee </h6>
-                            <img class="JenniferL" src="./jenniferl.jpg" width="264" height="264">
-                        </div>
-                        <div class="divTableCell">
-                            <h6> Logistics: Jennifer McCleary </h6>
-                            <img class="JenniferM" src="./jenniferm.jpg" width="264" height="264">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <br><br><br><br><br>
-    </div>
-
-    <div class="section" id="whycare">
-        <div class="content">
-            <h1>WHY CODE?</h1>
-            <h6>Invent</h6>
-            Like Google says, "things you love are Made with Code". Check out the <a href="https://www.madewithcode.com/">Made with Code website</a> to start building with code.
-
-            <h6>Create impact</h6>
-            Code gives you the power to address what you think should be better in our world.
-            
-            <h6>Have fun</h6>
-            See changes as you make them, and apply your creative design skills to make websites or apps.
-            Solve puzzles and brainteasers to tackle real-world problems.
-        </div>
-        <br>
-        <br>
-        <br><br><br><br><br>
     </div>
 
 </body>
