Ideas added to interacive images

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -56,7 +56,10 @@
                         <a class="page-scroll" href="#values">Values</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#team">Our Team</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#team">Q&A</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -74,7 +77,7 @@
                 <img src="img/logo.png" height = 200vh>
                 <!-- <h1 id="homeHeading">CodeIt</h1> -->
                 <hr>
-                <h2> Come explore computer science with us.</h2>
+                <h2> Explore Computer Science with us.</h2>
                 <br>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a>
             </div>
@@ -87,10 +90,12 @@
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">CodeIt! is an MIT program that guides girls to explore and pursue computer science.
                     Our team of experienced and upbeat MIT mentors works with middle school girls with little or no programming experience.
-                    Through a series of weekly hands-on lessons you will develop computer science skills, participate in interactive workshops, and connect with other students.</h2>
+                    Through a series of weekly hands-on lessons we will develop computer science skills, participate in interactive workshops, and connect with other students.</h2>
                     <hr class="light">
                     <p class="text-faded">
                     According to a 2016 report by the Information Technology and Innovation Foundation, <i>Only 21.9 percent of students in AP computer science courses are female, the most egregious gender skew of any AP course... Reaching girls before high school is important, as those who take AP CS in high school are more than 10 times more likely to major in Computer Science than those who do not. </i>
+                    <br>
+                    At CodeIt! we want to make sure that girls feel confident and enthusiastic studying Computer Science in high school and beyond.
                     </p>
                     <a href="https://docs.google.com/forms/d/e/1FAIpQLSf--HlMCUu9J6Zz6OC_2L0jcyQmn5ND45fbfengHBxABkV9Sg/closedform" class="page-scroll btn btn-default btn-xl sr-button">Apply to be a Student!</a>
                 </div>
@@ -113,28 +118,29 @@
                     <div class="service-box">
                         <i class="fa fa-5x fa-comments text-primary sr-icons"></i>
                         <h3>Curiosity</h3>
-                        <p class="text-muted">Our templates are updated regularly so they don't break.</p>
+                        <p class="text-muted">We encourage our girls to ask questions about Computer Science, and why we love it.</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-5x fa-laptop text-primary sr-icons"></i>
                         <h3>Challenge</h3>
-                        <p class="text-muted">You can use this theme as is, or you can make changes!</p>
+                        <p class="text-muted">The best problems are tough.  We'll give you the tools to tackle them. </p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-5x fa-heart text-primary sr-icons"></i>
                         <h3>Collaboration</h3>
-                        <p class="text-muted">We update dependencies to keep things fresh.</p>
+                        <p class="text-muted">  Two heads are better than one.  
+                        At CodeIt! we'll make you a better teammate.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <section class="no-padding" id="portfolio">
+    <section class="no-padding" id="team">
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
@@ -143,25 +149,25 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Idea 
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    One box contains "Apply to be a mentor button"
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/2.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/2.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/bg.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/bg.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Category
+                                 <div class="project-category text-faded">
+                                    Under Construction 
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Mentor Photos & Bios to come
                                 </div>
                             </div>
                         </div>
@@ -173,25 +179,25 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Idea
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    "Our Team" label on center box
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/4.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/4.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/bg.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/bg.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Under Construction 
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Mentor Photos & Bios to come
                                 </div>
                             </div>
                         </div>
@@ -203,29 +209,53 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Under Construction 
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Mentor Photos & Bios to come
                                 </div>
                             </div>
                         </div>
                     </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
-                    <a href="img/portfolio/fullsize/6.jpg" class="portfolio-box">
-                        <img src="img/portfolio/thumbnails/6.jpg" class="img-responsive" alt="">
+                    <a href="img/portfolio/fullsize/bg.jpg" class="portfolio-box">
+                        <img src="img/portfolio/thumbnails/bg.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    Category
+                                    Under Construction 
                                 </div>
                                 <div class="project-name">
-                                    Project Name
+                                    Mentor Photos & Bios to come
                                 </div>
                             </div>
                         </div>
                     </a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="Q&A">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Q&A</h2>
+                    <hr class="primary">
+                </div>
+
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h2 class="section-heading">CodeIt! is an MIT program that guides girls to explore and pursue computer science.
+                    Our team of experienced and upbeat MIT mentors works with middle school girls with little or no programming experience.
+                    Through a series of weekly hands-on lessons we will develop computer science skills, participate in interactive workshops, and connect with other students.</h2>
+                    <hr class="light">
+                    <p class="text-faded">
+                    According to a 2016 report by the Information Technology and Innovation Foundation, <i>Only 21.9 percent of students in AP computer science courses are female, the most egregious gender skew of any AP course... Reaching girls before high school is important, as those who take AP CS in high school are more than 10 times more likely to major in Computer Science than those who do not. </i>
+                    <br>
+                    At CodeIt! we want to make sure that girls feel confident and enthusiastic studying Computer Science in high school and beyond.
+                    </p>
+                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf--HlMCUu9J6Zz6OC_2L0jcyQmn5ND45fbfengHBxABkV9Sg/closedform" class="page-scroll btn btn-default btn-xl sr-button">Apply to be a Mentor!</a>
                 </div>
             </div>
         </div>
