Finsihed everything but Mentor photos + Bios

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Creative - Start Bootstrap Theme</title>
+    <title>CodeIt!@MIT</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -19,7 +19,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-    <!-- Plugin CSS -->
+    <!-- Plugoin CSS -->
     <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 
     <!-- Theme CSS -->
@@ -59,7 +59,7 @@
                         <a class="page-scroll" href="#team">Our Team</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#team">Q&A</a>
+                        <a class="page-scroll" href="#Q&A">Q&A</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -237,54 +237,160 @@
         </div>
     </section>
 
-    <section id="Q&A">
+
+
+<section id="Q&A">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Q&A</h2>
                     <hr class="primary">
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-5x fa-home text-primary sr-icons"></i>
+                        <h3>Parents</h3>
+                        <br>
+                        <p class="text-muted"> <b> When is it? </b></p>
+                        <p class="text-muted">The program meets weekly, on Saturday afternoons from 11am to 3pm. The Fall 2017 session will begin on October 7 and end on December 2. We will not meet on November 25. This is a total of 8 sessions (10/7, 10/14, 10/21, 10/28, 11/4, 11/11, 11/18, and 12/2).</p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
 
-                <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">CodeIt! is an MIT program that guides girls to explore and pursue computer science.
-                    Our team of experienced and upbeat MIT mentors works with middle school girls with little or no programming experience.
-                    Through a series of weekly hands-on lessons we will develop computer science skills, participate in interactive workshops, and connect with other students.</h2>
-                    <hr class="light">
-                    <p class="text-faded">
-                    According to a 2016 report by the Information Technology and Innovation Foundation, <i>Only 21.9 percent of students in AP computer science courses are female, the most egregious gender skew of any AP course... Reaching girls before high school is important, as those who take AP CS in high school are more than 10 times more likely to major in Computer Science than those who do not. </i>
-                    <br>
-                    At CodeIt! we want to make sure that girls feel confident and enthusiastic studying Computer Science in high school and beyond.
-                    </p>
-                    <a href="https://docs.google.com/forms/d/e/1FAIpQLSf--HlMCUu9J6Zz6OC_2L0jcyQmn5ND45fbfengHBxABkV9Sg/closedform" class="page-scroll btn btn-default btn-xl sr-button">Apply to be a Mentor!</a>
+                        <br><p class="text-muted"> <b> How much does the program cost? </b></p>
+                        <p class="text-muted">The program will be free of charge. We have computers and smartphones for students to use and will provide catered lunch each day.</p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> Do students recieve a certificate upon completion of the program? </b></p>
+                        <p class="text-muted">Students will receive a symbolic certificate associated with the program. Note that the certificate is awarded by the program, and not on behalf of MIT.</p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> Where is the program? </b></p>
+                        <p class="text-muted">The program is at MIT. Our activities will be in MIT classrooms or MIT outdoor spaces.</p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> What is the schedule? </b></p>
+                        <p class="text-muted">Each session will include coding activities, social activities, demonstrations, and a lunch break. </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> Where should students be dropped off and picked up? </b></p>
+                        <p class="text-muted"> Students should be dropped off by 10:50am and picked up at 3:10pm. Exact drop-off and pick-up locations will be communicated via email upon acceptance to the program. </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> Who organizes CodeIt!? </b></p>
+                        <p class="text-muted"> MIT students! </p>
+                    </div>
+                </div>
+
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-5x fa-graduation-cap text-primary sr-icons"></i>
+                        <h3>Students</h3>
+                        <br>
+                        <p class="text-muted"> <b> Can boys participate? </b></p>
+                        <p class="text-muted">The program is intended to help decrease the gender-gap in technology, so it is not open to boys.</p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br><p class="text-muted"> <b> What programming experience do I need to participate? </b></p>
+                        <p class="text-muted">Zero! We want to introduce you to programming, and do not expect you to have any previous programming experience. </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> If I have programmed previously, can I still participate? </b></p>
+                        <p class="text-muted">We are first-and-foremost opening the program to students with no prior experience. However, if there are open spots, we welcome you to participate! </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> Can a 9th grade student still apply? </b></p>
+                        <p class="text-muted">Unfortunately, we won't be accepting applications from 9th grade students. Please feel free to instead check out high school outreach programs here! </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> How can I prepare for the program? </b></p>
+                        <p class="text-muted">If you are curious to learn more about programming, feel free to play around with <a href="https://scratch.mit.edu/">Scratch!</a> However, we don't require you to do any preparation ahead of time.</p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> I can't make it to all of the sessions, should I still apply? </b></p>
+                        <p class="text-muted"> We give heavy preference to girls who can commit to all of our class sessions, but we still encourage you to apply! We can make arrangements to send supplementary materials to make up for the missed class(es), if need be. </p>
+
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <div class="service-box">
+                        <i class="fa fa-5x fa-university text-primary sr-icons"></i>
+                        <h3>Mentors</h3>
+                        <br>
+                        <p class="text-muted"> <b> What is the weekly time commitment? </b></p>
+                        <p class="text-muted">The classes run from 11am to 3pm on Saturdays, so you should be available from 10:30am to 3:30pm. You are expected to attend all sessions. </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br><p class="text-muted"> <b> Is there time commitment outside of weekly sessions? </b></p>
+                        <p class="text-muted"> Prior to the program's start, you are expected to meet with the other mentors once, so that you know what we have planned and get to know your fellow mentors. We may also ask you to review upcoming material on your own time. </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> What experience do I need? </b></p>
+                        <p class="text-muted">Be friendly and fun! You should understand fundamental programming concepts, and have taken at least an introductory computer science course (e.g. AP Computer Science, 6.0001/0002). Familiarity with block-based programming (e.g. Scratch, App Inventor) is a plus, but not required! </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> What do mentors do? </b></p>
+                        <p class="text-muted">As a mentor, you will be like a role model to the students. You will be someone that the students turn to when they have questions, are stuck, or just want to talk about life in STEM!</p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> How can I be involved beyond mentoring? </b></p>
+                        <p class="text-muted">Contact us; we would love for you to be involved in developing the coding and non-coding activities! </p>
+                        <br><i class="fa fa-1x fa-circle text-primary sr-icons"></i><br>
+
+                        <br> <p class="text-muted"> <b> What does a typical session consist of? </b></p>
+                        <p class="text-muted"> Feel free to take a look at the lesson plans <a href="https://mitcodeit.wordpress.com/mentors/"> here! </a></p>
+
+                    </div>
                 </div>
             </div>
         </div>
     </section>
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>Free Download at Start Bootstrap!</h2>
-                <a href="http://startbootstrap.com/template-overviews/creative/" class="btn btn-default btn-xl sr-button">Download Now!</a>
+    <section class="bg-primary" id="Q&A">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 text-center">
+                    <h1 class="section-heading">Why do we code?</h1>
+                    <hr class="light">
+                    <p class="text-muted">
+                    <h2> To invent... </h2>
+                    <h4>So much of the world around us has been generated with code. Just think of all the things you Google, how often you rely on the your GPS, and the software you use!  Check out the <a href = "https://www.madewithcode.com/home/" class = "text-muted"> Made with Code website </a> to start building with code.</h4>
+                    <br><i class="fa fa-1x fa-circle text-faded sr-icons"></i>
+                    <h2> To make a difference... </h2>
+                    <h4>Computer Science is a powerful tool to study the world around us.  Code gives you the power to address what you think should be better in our world.  ~Give examples that ar elinks to articles of code doing cool things~ </h4>
+                    <br><i class="fa fa-1x fa-circle text-faded sr-icons"></i>
+                    <h2>For fun!</h2>
+                    <h4>See changes as you make them, and apply your creative design skills to make websites or apps. Solve puzzles and brainteasers to tackle real-world problems.</h4>
+                    </p>
+                </div>
             </div>
         </div>
-    </aside>
+    </section>
 
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <h2 class="section-heading">Let's Get In Touch!</h2>
+                    <h2 class="section-heading">Contact Us</h2>
                     <hr class="primary">
-                    <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                    <p>We would love to answer any questions you have about CodeIt!@MIT</p>
                 </div>
-                <div class="col-lg-4 col-lg-offset-2 text-center">
-                    <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <a href="https://www.facebook.com/mitcodeit/">
+                        <i class="fa fa-facebook fa-4x sr-contact"></i>
+                    </a>
                 </div>
-                <div class="col-lg-4 text-center">
-                    <i class="fa fa-envelope-o fa-3x sr-contact"></i>
-                    <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <a href="https://twitter.com/mit_codeit">
+                        <i class="fa fa-twitter fa-4x sr-contact"></i>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-md-6 text-center">
+                    <a href="https://twitter.com/mit_codeit">
+                        <i class="fa fa-envelope-o fa-4x sr-contact"></i>
+                    </a>
                 </div>
             </div>
         </div>
