--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@
                     </a>
                 </div>
                 <div class="col-lg-4 col-md-6 text-center">
-                    <a href="https://twitter.com/mit_codeit">
+                    <a href="mailto:codeit-exec@mit.edu">
                         <i class="fa fa-envelope-o fa-4x sr-contact"></i>
                     </a>
                 </div>
