--- a/index.html
+++ b/index.html
@@ -144,6 +144,7 @@
         <div class="container-fluid">
             <div class="row no-gutter popup-gallery">
                 <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/1.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/1.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -155,8 +156,10 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/bg.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/bg.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -168,8 +171,10 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/3.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/3.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -181,8 +186,10 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/bg.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/bg.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -194,8 +201,10 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/5.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/5.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -207,8 +216,10 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
                 </div>
                 <div class="col-lg-4 col-sm-6">
+                    <a href="img/portfolio/fullsize/bg.jpg" class="portfolio-box">
                         <img src="img/portfolio/thumbnails/bg.jpg" class="img-responsive" alt="">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
@@ -220,6 +231,7 @@
                                 </div>
                             </div>
                         </div>
+                    </a>
                 </div>
             </div>
         </div>
